[package]
name        = "valence-domain-clients"
authors    = ["Timewave Labs"]
edition    = "2021"
license    = "Apache-2.0"
version    = "0.1.0"
repository = "https://github.com/timewave-computer/valence-domain-clients"
description = "Client implementations for interacting with Valence Protocol domains"

[features]
test-utils = []

[dependencies]
# generic imports
anyhow      = "1.0.83"
tokio       = "1.43.0"
async-trait = "0.1.77"
serde              = { version = "1.0.207", default-features = false, features = ["derive"] }
serde_json         = "1.0.125"
prost              = { version = "0.13.3", default-features = false }
log                = "0.4.22"
thiserror          = "1.0.63"

# cosmos-specific imports
bip32                   = { version = "0.5", features = ["bip39"] }
cosmrs                  = { version = "0.21.1", features = ["cosmwasm", "rpc", "grpc"] }
cosmos-sdk-proto        = { version = "0.26.1", features = ["grpc-transport", "grpc"] }
tonic                   = { version = "0.12.3", features = ["transport", "tls", "tls-native-roots"] }
hex                     = "0.4.3"
neutron-std             = "5.1.2"
ibc                     = "0.57.0"

# coprocessor-specific imports
valence-coprocessor-domain-prover = { git = "https://github.com/timewave-computer/valence-coprocessor-domain-prover.git", tag = "v0.3.1" }

# evm-specific imports
alloy_signer_local = { package = "alloy-signer-local", version = "0.9.2", features = [
    "mnemonic",
    "keystore",
] }
alloy_primitives_encoder = { package = "alloy-primitives", version = "0.7.7" }
alloy_sol_types_encoder = { package = "alloy-sol-types", version = "0.7.7" }
alloy = { version = "0.9.2", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-keystore",
    "signer-mnemonic",
    "signers",
] }

# solana-specific imports
solana-client = "2.0"
solana-sdk = "2.0"
solana-rpc-client = "2.0"
solana-rpc-client-api = "2.0"
solana-account-decoder = "2.0"
solana-transaction-status = "2.0"
bs58 = "0.5.1"
ed25519-dalek = "2.1.1"

[dev-dependencies]
# valence-e2e = { git = "https://github.com/timewave-computer/valence-protocol" }
