[package]
name = "valence-domain-clients"
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "2.0.0"
repository = "https://github.com/timewave-computer/valence-domain-clients"
description = "Client implementations for interacting with Valence Protocol domains"

[features]
default = ["coprocessor", "coprocessor-bin", "cosmos", "evm", "indexer"]
coprocessor = [
  "base64",
  "const-hex",
  "log",
  "msgpacker",
  "toml",
  "uuid",
  "valence-crypto-utils",
]
coprocessor-bin = ["clap", "colored", "coprocessor"]
cosmos = [
  "alloy",
  "bip32",
  "cosmos-sdk-proto",
  "cosmrs",
  "ed25519-zebra",
  "hex",
  "ibc",
  "log",
  "neutron-std",
  "prost",
  "tonic",
]
evm = ["alloy", "alloy_signer_local", "log", "tonic"]
indexer = ["alloy", "tonic"]
solana = [
  "bip32",
  "bs58",
  "ed25519-dalek",
  "log",
  "solana-client",
  "solana-account-decoder",
  "solana-rpc-client",
  "solana-rpc-client-api",
  "solana-sdk",
  "solana-transaction-status",
]
test-utils = []

[dependencies]
# generic imports
anyhow = "1.0.83"
async-trait = "0.1.77"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0.125"

# fixes
# TODO cosmwasm broken deps; remove when fixed
ed25519-zebra = { version = "=4.0.3", default-features = false, optional = true }

# cosmos-specific imports
bip32 = { version = "0.5", features = ["bip39"], optional = true }
cosmrs = { version = "0.21.1", features = [
  "cosmwasm",
  "rpc",
  "grpc",
], optional = true }
cosmos-sdk-proto = { version = "0.26.1", features = [
  "grpc-transport",
  "grpc",
], optional = true }
log = { version = "0.4.22", optional = true }
tonic = { version = "0.12.3", features = [
  "transport",
  "tls",
  "tls-native-roots",
], optional = true }
neutron-std = { version = "5.1.2", optional = true }
ibc = { version = "0.57.0", optional = true }
prost = { version = "0.13.3", default-features = false, optional = true }
hex = { version = "0.4.3", optional = true }

# coprocessor-specific imports
base64 = { version = "0.22.1", optional = true }
const-hex = { version = "1.14.1", default-features = false, features = [
  "alloc",
  "core-error",
], optional = true }
msgpacker = { version = "0.4.8", optional = true }
toml = { version = "0.9.5", optional = true }
uuid = { version = "1.17.0", features = ["v4"], optional = true }
valence-crypto-utils = { version = "0.1.1", optional = true }

# coprocessor-bin specific imports
clap = { version = "4.5.37", optional = true, features = ["derive", "env"] }
colored = { version = "3.0.0", optional = true }

# evm-specific imports
alloy_signer_local = { package = "alloy-signer-local", version = "0.9.2", features = [
  "mnemonic",
  "keystore",
], optional = true }
alloy = { version = "0.9.2", features = [
  "eips",
  "full",
  "hyper",
  "json-rpc",
  "node-bindings",
  "rpc-client",
  "rpc-types-debug",
  "rpc-types-trace",
  "signer-keystore",
  "signer-mnemonic",
  "signers",
], optional = true }

# solana-specific imports
solana-client = { version = "2.0", optional = true }
solana-sdk = { version = "2.0", optional = true }
solana-rpc-client = { version = "2.0", optional = true }
solana-rpc-client-api = { version = "2.0", optional = true }
solana-account-decoder = { version = "2.0", optional = true }
solana-transaction-status = { version = "2.0", optional = true }
bs58 = { version = "0.5.1", optional = true }
ed25519-dalek = { version = "2.0.0", optional = true }

[dev-dependencies]
# valence-e2e = { git = "https://github.com/timewave-computer/valence-protocol" }
blake3 = "1.8.2"

[[bin]]
name = "valence-coprocessor"
path = "src/bin/coprocessor/main.rs"
required-features = ["coprocessor-bin"]
